--- a/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.scss
+++ b/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.scss
@@ -9,6 +9,7 @@
   @media screen and (max-width: 640px) {
     width: 100%;
     padding: 45px 20px;
+    gap: 12px;
   }
 
   .card-header {
@@ -43,6 +44,11 @@
     object-position: top;
     border-radius: 50%;
     position: relative;
+
+    @media screen and (max-height: 740px) {
+      height: 150px;
+      width: 150px;
+    }
 
     &:hover {
       cursor: pointer;
@@ -106,6 +112,10 @@
         &::placeholder {
           color: var(--grey-color);
           font-size: 18px;
+        }
+
+        @media screen and (max-width: 640px) {
+          padding: 10px 20px;
         }
       }
 
