save-icon changed

--- a/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.html
+++ b/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.html
@@ -37,7 +37,7 @@
         <mat-icon
           class="material-symbols-outlined edit-mobile icon"
           (click)="saveNewName()"
-          >save</mat-icon
+          >check_circle</mat-icon
         >
       </ng-template>
     </div>
@@ -108,7 +108,7 @@
         <mat-icon
           class="material-symbols-outlined edit-mobile icon"
           (click)="saveNewEmail()"
-          >save</mat-icon
+          >check_circle</mat-icon
         >
       </ng-template>
     </div>
