edit-dialog style changes

--- a/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.html
+++ b/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.html
@@ -64,7 +64,7 @@
   <div class="profile-info-name">
     <div class="name-edit">
       <div class="wrapper">
-        <mat-icon>mail_outline</mat-icon>
+        <mat-icon class="material-symbols-outlined">mail_outline</mat-icon>
         <h3>E-Mail-Adresse</h3>
       </div>
       <span
