--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -13,7 +13,12 @@
   <div class="profile" (click)="toggleDropdown()">
     <p *ngIf="userData">{{ userData.displayName }}</p>
     <div class="image-with-badge">
-      <img *ngIf="userData" src="{{ userData.photoURL }}" alt="" />
+      <img
+        *ngIf="userData"
+        src="{{ userData.photoURL }}"
+        alt=""
+        matTooltip="{{ userData.displayName }}"
+      />
       <div class="badge"></div>
     </div>
     <mat-icon>keyboard_arrow_down</mat-icon>
