--- a/src/app/landing-page/login/login.component.scss
+++ b/src/app/landing-page/login/login.component.scss
@@ -9,6 +9,7 @@
   mat-card {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     gap: 40px;
 
@@ -53,7 +54,7 @@
 
       p {
         background-color: var(--text-color);
-        padding: var(--padding-16);
+        padding: 0 var(--padding-16);
       }
     }
 
@@ -63,6 +64,7 @@
       align-items: center;
       justify-content: center;
       width: 100%;
+      height: 10%;
       border-radius: 100px;
       background-color: var(--bg-color);
       padding: var(--padding-16);
@@ -82,6 +84,7 @@
 
     .buttons {
       width: 100%;
+      height: 10%;
       display: flex;
       justify-content: center;
       gap: var(--gap-30);
