--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -1,11 +1,18 @@
 <mat-toolbar class="sidenav-toolbar">
   <div class="toolbar-header">
-    <img src="./assets/img/Workspace logo.png" alt="" />
-    <span>Devspace</span>
+    <div class="toolbar-logo">
+      <img src="./assets/img/Workspace logo.png" alt="" />
+      <span>Devspace</span>
+    </div>
+    <button mat-icon-button class="toolbar-icon" routerLink=".">
+      <mat-icon class="material-symbols-outlined">edit_square</mat-icon>
+    </button>
   </div>
-  <button mat-icon-button class="toolbar-icon" routerLink=".">
-    <mat-icon class="material-symbols-outlined">edit_square</mat-icon>
-  </button>
+  <app-search-bar
+    [placeholder]="'Gehe zu'"
+    [searchIconExists]="true"
+    [inputFont]="false"
+  ></app-search-bar>
 </mat-toolbar>
 
 <div class="toolbars">
