--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -56,30 +56,19 @@
 
 .example-container {
   height: calc(100vh - 145px);
+  width: 100%;
   background-color: unset;
   z-index: 1;
-  border-radius: 30px;
-}
 
-.example-sidenav {
-  width: 102%;
-  padding: 24px;
-  color: black;
-  background-color: white;
+  .example-sidenav {
+    border-radius: 30px;
+    width: 366px;
+    padding: 24px;
+    color: black;
+    background-color: white;
 
-  ::ng-deep.mat-drawer-inner-container {
-    overflow: hidden !important;
+    ::ng-deep.mat-drawer-inner-container {
+      overflow: hidden !important;
+    }
   }
-}
-section {
-  display: flex;
-  // flex-direction: column;
-  height: calc(100vh - 145px);
-  // height: 100%;
-  width: 100%;
-  // gap: 20px;
-}
-
-router-outlet {
-  display: none;
 }
