--- a/src/app/main/main-message-area/main-message-area.component.html
+++ b/src/app/main/main-message-area/main-message-area.component.html
@@ -1,15 +1,16 @@
-<section [ngClass]="{'padding-right-20': threadOpened === true}">
+<section [ngClass]="{ 'padding-right-20': threadOpened === true }">
   <mat-card appearance="outlined" class="mat-card-container">
     <mat-card-content>
       <app-message-area-header></app-message-area-header>
-      <app-message-area-chat-history [currentUserId]="currentUserId"></app-message-area-chat-history>
+      <app-message-area-chat-history
+        [currentUserId]="currentUserId"
+      ></app-message-area-chat-history>
       <app-message-area-new-message></app-message-area-new-message>
     </mat-card-content>
   </mat-card>
 </section>
 <mat-sidenav-container class="example-container" *ngIf="shouldRun">
-  <mat-sidenav #sidenav mode="side" [(opened)]="opened" position="end"
-    >
+  <mat-sidenav #sidenav mode="side" [(opened)]="opened" position="end">
     <app-thread [currentUserId]="currentUserId"></app-thread>
   </mat-sidenav>
   <mat-sidenav-content> </mat-sidenav-content>
