--- a/src/app/main/new-message-placeholder/new-message-placeholder.component.scss
+++ b/src/app/main/new-message-placeholder/new-message-placeholder.component.scss
@@ -11,6 +11,10 @@ section {
   display: flex;
 }
 
+.padding-left-20 {
+  padding-left: var(--padding-20);
+}
+
 app-message-area-header {
   width: 100%;
   height: 10svh !important;
