Cleancode and JSDOC for privatechat, newMessagePlaceholder, Thread, some Services, some shared Components.

--- a/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.scss
+++ b/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.scss
@@ -40,9 +40,11 @@
   gap: 10px;
 
   > p {
-    display: flex;
-    justify-content: flex-end;
+    text-align: right;
     padding-right: 5px;
+    word-wrap: break-word; /* Bricht lange Wörter um */
+    overflow-wrap: break-word; /* Alternative für Kompatibilität */
+    white-space: normal; /* Zeilenumbrüche erlauben */
   }
 }
 
