--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
@@ -14,6 +14,7 @@
         <mat-icon
           class="material-symbols-outlined"
           [matMenuTriggerFor]="uploadMethodMenu"
+          #uploadMethodMenuTrigger="matMenuTrigger"
           (click)="toggleBorder('upload')"
           >add</mat-icon
         >
