--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.html
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.html
@@ -27,6 +27,7 @@
       </div>
       <div
         [matMenuTriggerFor]="emojiMenu"
+        #emojiMenuTrigger="matMenuTrigger"
         (menuOpened)="onMenuOpened(message.messageId)"
         (menuClosed)="onMenuClosed(message.messageId)"
         (click)="toggleBorder('emoji')"
@@ -118,6 +119,7 @@
     <app-emoji-picker
       [message]="message"
       [component]="'channel'"
+      (isChannelReaction)="handleChannelReaction($event)"
     ></app-emoji-picker>
   </mat-menu>
 </section>
