--- a/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.html
+++ b/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.html
@@ -23,6 +23,7 @@
   </span>
   <app-message-reactions
     [message]="message"
+    [component]="'privateChat'"
     *ngIf="message.reactions.length > 0"
   ></app-message-reactions>
 </section>
