--- a/src/app/shared/components/message-reactions/message-reactions.component.html
+++ b/src/app/shared/components/message-reactions/message-reactions.component.html
@@ -33,7 +33,7 @@
   <mat-menu xPosition="after" #emojiMenu>
     <app-emoji-picker
       [message]="message"
-      [component]="'channel'"
+      [component]="component"
     ></app-emoji-picker>
   </mat-menu>
 </div>
