Changed the ngif for the maticon search at the input of the new message placeholder.

--- a/src/app/main/new-message-placeholder/new-message-header/new-message-header.component.html
+++ b/src/app/main/new-message-placeholder/new-message-header/new-message-header.component.html
@@ -2,7 +2,7 @@
   <h3>Neue Nachricht</h3>
   <app-search-bar
     [placeholder]="'An: #channel, oder @jemand oder E-Mail-Adresse'"
-    [searchIconExists]="true"
+    [searchIconExists]="false"
     [inputFont]="false"
   ></app-search-bar>
 </mat-toolbar>
