Added an error notification for larger attachments than 500kb.

--- a/src/app/shared/components/upload-method-selector/upload-method-selector.component.html
+++ b/src/app/shared/components/upload-method-selector/upload-method-selector.component.html
@@ -1,6 +1,6 @@
 <section (click)="$event.stopPropagation()">
     <h3>Anhang hinzufügen</h3>
-    <div class="choose-file" (click)="openFileDialog('documents')"><img src="../../../../assets/icons/document.webp" alt="">Dokument</div>
+    <div class="choose-file" (click)="openFileDialog('document')"><img src="../../../../assets/icons/document.webp" alt="">Dokument</div>
     <div class="choose-file" (click)="openFileDialog('image')"><img src="../../../../assets/icons/image.webp" alt="">Bild</div>
     
     <!-- Drag-and-Drop-Feld -->
