--- a/src/app/landing-page/login/login.component.scss
+++ b/src/app/landing-page/login/login.component.scss
@@ -11,8 +11,10 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    gap: 40px;
 
+    min-height: 60%;
+    max-height: 80%;
+    min-width: 25%;
     max-width: 50%;
 
     text-align: center;
@@ -97,7 +99,7 @@
 
   .logo-bg {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     left: 0;
     display: flex;
@@ -112,7 +114,11 @@
   }
 
   .logo {
-    position: absolute;
+    position: fixed; /* Stellt sicher, dass das Element nicht die Mitte beeinflusst */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
 
     .logo-container {
       position: relative;
