--- a/src/app/main/main-message-area/main-message-area.component.scss
+++ b/src/app/main/main-message-area/main-message-area.component.scss
@@ -13,10 +13,17 @@ section {
 
 .padding-right-20 {
   padding-right: var(--padding-20);
+  @media screen and (max-width: 992px) {
+    padding-right: 0;
+  }
 }
 
 .padding-left-20 {
   padding-left: var(--padding-20);
+
+  @media screen and (max-width: 992px) {
+    padding-left: 0;
+  }
 }
 
 app-message-area-header {
@@ -61,20 +68,21 @@ mat-card-content {
 }
 
 mat-sidenav-container {
-  border-radius: 30px;
   right: auto;
   left: 0px;
-  flex: none;
+  width: 100%;
+  background-color: transparent;
 }
 
 mat-sidenav {
   width: 400px;
+  border-radius: 30px !important;
   background-color: var(--text-color);
-  box-shadow: 0px 2px 2px 0px #00000014;
+  box-shadow: unset !important;
 }
 
 mat-sidenav-content {
   height: 100%;
-  width: 0;
+  box-shadow: unset !important;
   border-radius: 30px;
 }
