--- a/src/app/main/main-message-area/main-message-area.component.html
+++ b/src/app/main/main-message-area/main-message-area.component.html
@@ -1,19 +1,3 @@
-<!-- <section
-  [ngClass]="{
-    'padding-right-20': threadOpened === true,
-    'padding-left-20': sideNavOpened === true
-  }"
->
-  <mat-card appearance="outlined" class="mat-card-container">
-    <mat-card-content>
-      <app-message-area-header></app-message-area-header>
-      <app-message-area-chat-history
-        [currentUserId]="currentUserId"
-      ></app-message-area-chat-history>
-      <app-message-area-new-message></app-message-area-new-message>
-    </mat-card-content>
-  </mat-card>
-</section> -->
 <mat-sidenav-container class="example-container" autosize>
   <mat-sidenav-content
     [ngClass]="{
@@ -31,7 +15,7 @@
       </mat-card-content>
     </mat-card>
   </mat-sidenav-content>
-  <mat-sidenav #sidenav mode="side" [(opened)]="opened" position="end">
+  <mat-sidenav #sidenav [mode]="drawerMode" [(opened)]="opened" position="end">
     <app-thread [currentUserId]="currentUserId"></app-thread>
   </mat-sidenav>
 </mat-sidenav-container>
