--- a/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
+++ b/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
@@ -28,6 +28,10 @@ mat-toolbar {
   border-top-right-radius: 30px;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
+
+  @media only screen and (max-width: 600px) {
+    border-radius: 0;
+  }
 }
 
 .button-channel-name {
