--- a/src/app/main/main-message-area/main-message-area.component.scss
+++ b/src/app/main/main-message-area/main-message-area.component.scss
@@ -11,21 +11,6 @@ section {
   display: flex;
 }
 
-.padding-right-20 {
-  padding-right: var(--padding-20);
-  @media screen and (max-width: 992px) {
-    padding-right: 0;
-  }
-}
-
-.padding-left-20 {
-  padding-left: var(--padding-20);
-
-  @media screen and (max-width: 992px) {
-    padding-left: 0;
-  }
-}
-
 app-message-area-header {
   width: 100%;
   height: 10svh !important;
@@ -50,6 +35,10 @@ app-message-area-new-message {
   background-color: var(--text-color);
   border-radius: 30px;
   box-shadow: 0px 2px 2px 0px #00000014;
+
+  @media only screen and (max-width: 600px) {
+    border-radius: 0;
+  }
 }
 
 mat-card-content {
@@ -80,8 +69,17 @@ mat-sidenav {
   background-color: var(--text-color);
   box-shadow: unset !important;
 
+  @media only screen and (max-width: 600px) {
+    border-radius: 0 !important;
+  }
+
   @media screen and (max-width: 992px) {
     box-shadow: -10px 0px 20px 0px var(--light-purple-color) !important;
+  }
+
+  @media only screen and (max-width: 600px) {
+    border-radius: 0;
+    width: 100%;
   }
 }
 
@@ -89,4 +87,8 @@ mat-sidenav-content {
   height: 100%;
   box-shadow: unset !important;
   border-radius: 30px;
+
+  @media only screen and (max-width: 600px) {
+    border-radius: 0;
+  }
 }
