--- a/src/app/main/new-message-placeholder/new-message-header/new-message-header.component.scss
+++ b/src/app/main/new-message-placeholder/new-message-header/new-message-header.component.scss
@@ -18,6 +18,10 @@ mat-toolbar {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   padding: 20px 30px;
+
+  @media only screen and (max-width: 600px) {
+    border-radius: 0;
+  }
 }
 
 h3 {
