--- a/src/app/main/new-message-placeholder/new-message-placeholder.component.scss
+++ b/src/app/main/new-message-placeholder/new-message-placeholder.component.scss
@@ -11,10 +11,6 @@ section {
   display: flex;
 }
 
-.padding-left-20 {
-  padding-left: var(--padding-20);
-}
-
 app-message-area-header {
   width: 100%;
   height: 10svh !important;
@@ -39,6 +35,10 @@ app-message-area-new-message {
   background-color: var(--text-color);
   border-radius: 30px;
   box-shadow: 0px 2px 2px 0px #00000014;
+
+  @media only screen and (max-width: 600px) {
+    border-radius: 0;
+  }
 }
 
 mat-card-content {
