--- a/src/app/main/private-chat/private-chat.component.scss
+++ b/src/app/main/private-chat/private-chat.component.scss
@@ -17,16 +17,6 @@ app-private-chat-header {
   display: flex;
 }
 
-.padding-left-20 {
-  padding-left: var(--padding-20);
-}
-
-// app-private-chat-history {
-//   display: flex;
-//   flex-grow: 1;
-//   overflow: hidden;
-// }
-
 app-private-chat-placeholder {
   display: flex;
   flex-grow: 1;
@@ -44,7 +34,11 @@ app-message-area-new-message {
   height: 100%;
   background-color: var(--text-color);
   border-radius: 30px;
-  box-shadow: 0px 2px 2px 0px #00000014;
+  box-shadow: none !important;
+
+  @media only screen and (max-width: 600px) {
+    border-radius: 0;
+  }
 }
 
 mat-card-content {
