--- a/src/app/landing-page/login/login.component_media.scss
+++ b/src/app/landing-page/login/login.component_media.scss
@@ -11,6 +11,14 @@
     left: 50px !important;
   }
 
+  .info-links {
+    position: absolute !important;
+    bottom: 20px !important;
+    align-items: end !important;
+    gap: unset !important;
+    width: unset !important;
+  }
+
   .register-link {
     top: 50px !important;
     right: 50px !important;
@@ -53,6 +61,14 @@
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
+  .login {
+    justify-content: space-evenly !important;
+
+    mat-card {
+      min-height: 70% !important;
+    }
+  }
+
   .logo {
     .logo-container {
       animation: logo-top-768 0.5s ease-in-out 3s 1 forwards !important;
@@ -79,7 +95,6 @@
     justify-content: center;
     align-items: center !important;
     width: 100%;
-    height: 20%;
   }
 
   .login mat-card {
@@ -95,13 +110,12 @@
     align-items: center !important;
     justify-content: center !important;
     width: 100%;
-    height: 20%;
   }
 
   .info-links {
     position: absolute !important;
-    bottom: 20px !important;
-    right: 25px !important;
+    bottom: 25px !important;
+    right: 20px !important;
     flex-direction: column;
     align-items: end !important;
     gap: unset !important;
@@ -110,8 +124,6 @@
 
   .login mat-card {
     max-width: unset !important;
-    min-height: 50% !important;
-    height: 100% !important;
   }
 }
 
