--- a/src/app/shared/components/notification-label/notification-label.component.scss
+++ b/src/app/shared/components/notification-label/notification-label.component.scss
@@ -4,8 +4,8 @@
   right: -1000px;
   z-index: 1000;
 
-  padding: 50px;
-  font-size: var(--fontsize-36);
+  padding: var(--padding-20);
+  font-size: var(--fontsize-24);
   background-color: var(--purple1-color);
   border-radius: 30px 30px 0 30px;
   box-shadow: 0px 6px 10px 0px #00000033;
