--- a/src/app/landing-page/register/select-avatar/select-avatar.component.scss
+++ b/src/app/landing-page/register/select-avatar/select-avatar.component.scss
@@ -9,8 +9,13 @@
   mat-card {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    gap: 40px;
+
+    min-height: 75%;
+    max-height: 80%;
+    min-width: 25%;
+    max-width: 50%;
 
     text-align: center;
 
@@ -114,10 +119,14 @@
       flex-direction: column;
       align-items: start;
       gap: 12px;
+      width: 100%;
 
       .avatars {
         display: flex;
         gap: 12px;
+        width: 100%;
+        overflow: auto;
+        padding: 8px 0;
 
         img {
           cursor: pointer;
