--- a/src/app/landing-page/register/select-avatar/select-avatar.component_media.scss
+++ b/src/app/landing-page/register/select-avatar/select-avatar.component_media.scss
@@ -1,3 +1,11 @@
+@media only screen and (max-width: 1250px) {
+  .headline {
+    h1 {
+      font-size: var(--fontsize-36) !important;
+    }
+  }
+}
+
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (max-width: 1200px) {
   .logo-container {
@@ -11,6 +19,14 @@
     align-items: end !important;
     gap: unset !important;
     width: unset !important;
+  }
+}
+
+@media only screen and (max-width: 1150px) {
+  .headline {
+    h1 {
+      font-size: var(--fontsize-32) !important;
+    }
   }
 }
 
@@ -29,14 +45,24 @@
     }
   }
 
-  .register mat-card {
+  .select-avatar mat-card {
     padding: 35px;
+  }
+
+  .headline {
+    flex-direction: column;
+    gap: unset !important;
+
+    mat-icon {
+      justify-content: start !important;
+      width: 100%;
+    }
   }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
-  .register {
+  .select-avatar {
     justify-content: space-evenly !important;
 
     mat-card {
@@ -63,9 +89,9 @@
     }
   }
 
-  .register mat-card {
+  .select-avatar mat-card {
     padding: 20px;
-    max-width: unset !important;
+    max-width: 100% !important;
   }
 }
 
@@ -75,6 +101,42 @@
 
 /* Very small devices (landscape tablets, 450px and down) */
 @media only screen and (max-width: 450px) {
+  .headline {
+    h1 {
+      font-size: var(--fontsize-24) !important;
+    }
+  }
+
+  .select-avatar-list {
+    gap: 8px !important;
+  }
+
+  .avatar-placeholder {
+    width: 120px !important;
+    height: 120px !important;
+
+    mat-icon {
+      width: 60px !important;
+      height: 60px !important;
+      font-size: 80px !important;
+    }
+  }
+
+  .avatars {
+    img {
+      width: 48px !important;
+      height: 48px !important;
+    }
+  }
+
+  .upload-avatar {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    gap: 8px !important;
+    margin: 8px 0 !important;
+  }
+
   a,
   p,
   span {
