finish/optimize reset-password responsiv view

--- a/src/app/landing-page/login/reset-password/reset-password.component.scss
+++ b/src/app/landing-page/login/reset-password/reset-password.component.scss
@@ -9,8 +9,13 @@
   mat-card {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    gap: 40px;
+
+    min-height: 60%;
+    max-height: 80%;
+    min-width: 25%;
+    max-width: 50%;
 
     text-align: center;
 
@@ -46,7 +51,7 @@
     }
 
     p {
-      color: var(--black-color);
+      color: var(--grey-color);
     }
 
     .next-button {
