--- a/src/app/shared/components/imprint/imprint.component.html
+++ b/src/app/shared/components/imprint/imprint.component.html
@@ -1,14 +1,26 @@
-<h1>Impressum</h1>
+<div class="content">
+  <mat-card>
+    <div class="headline">
+      <mat-icon class="back-icon" (click)="navigateToLogin()"
+        >arrow_back</mat-icon
+      >
 
-<p>
-  Mr. Mustermann<br />
-  Test Stra&szlig;e, 123<br />
-  12345 Musterort
-</p>
+      <h1>Impressum</h1>
+    </div>
 
-<h2>Kontakt</h2>
-<p>
-  Telefon: +49 (0) 123 44 55 66<br />
-  Telefax: nicht vorhanden.<br />
-  E-Mail: email.adresse&#64;mail.de
-</p>
+    <p>
+      Mr. Mustermann<br />
+      Test Stra&szlig;e, 123<br />
+      12345 Musterort
+    </p>
+
+    <section>
+      <h2>Kontakt</h2>
+      <p>
+        Telefon: +49 (0) 123 44 55 66<br />
+        Telefax: nicht vorhanden.<br />
+        E-Mail: email.adresse&#64;mail.de
+      </p>
+    </section>
+  </mat-card>
+</div>
